terraform/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
        cert-manager.io/issue-temporary-certificate: "true"
        ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.class: contour
        kubernetes.io/tls-acme: "true"
        projectcontour.io/response-timeout: infinite
        projectcontour.io/websocket-routes: /
    name: placenl-app
    namespace: placenl
spec:
    rules:
        - host: chief.placenl.nl
          http:
              paths:
                  - backend:
                        service:
                            name: placenl-app-service
                            port:
                                number: 3000
                    path: /
                    pathType: Prefix
    tls:
        - hosts:
              - chief.placenl.nl
          secretName: placen-tls
